--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Dutch Digital Agencies Website">
-		<title>Dutch Digital Agencies</title>
+		<title>DDA Spike 2</title>
 		<link rel="stylesheet" href="/global.css">
 
 		%sveltekit.head%
